css/style.css
body{
	margin:0;
	padding: 0;
}

header {
	background: #2f2f2f;
	color: white;
	font-size: 2.5em;
	padding: 15px 0;
}

main, div#container {
	margin: auto;
	max-width: 80%;
}
	progress {
		-webkit-appearance: none;
		-ms-appearance: none;
		display: block;
		width: 100%;
		height: 10px;
		margin: 10px 0;
		border-radius: 20px;
	}
		progress::-webkit-progress-bar  {
			background: #555;
			border-radius: 20px;
		}
		progress::-webkit-progress-value {
			border-radius: 50px;
			box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);  
			background-size: 30px 30px;
			background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
		}

footer {
	position: fixed;
	bottom: 0;
	width: 100%;
	text-align: center;
}

@-webkit-keyframes move {
	0% {background-position: 0px 0px, 0 0, 0 0}
	100% {background-position: -100px 0px, 0 0, 0 0}
}

